# cortex

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/adapters/: __init__.py  anthropic_adp.py  docdb_adp.py  gemini_adp.py  http_adp.py  openai_adp.py  redis_adp.py
app/core/: errors.py  security.py
app/entities/: __init__.py  pipeline_llm.py  tools_gemini.py  tools_openai.py  user_ent.py
app/routers/user/: controller.py  models.py  service.py
docs/plans/: gemini-computer-use.md
