[project]
name = "cortex"
version = "0.1.0"
description = "Experimentation platform for FastAPI, SDKs, context management, and harnesses"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.4.0",
    "pyjwt>=2.9.0",
    "httpx>=0.27.0",
    "anthropic[vertex]>=0.40.0",
    "pydantic[email]>=2.13.4",
    "redis[asyncio]>=8.0.1",
    "bcrypt>=5.0.0",
    "pydantic-mongo>=3.1.0",
    "openai>=2.44.0",
    "google-genai>=2.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
    "pyright>=1.1.380",
]

# ── Ruff ─────────────────────────────────────────────────────────────────────
# Ruff is a linter + formatter in one tool (replaces flake8, isort, black).
# `ruff check` → lint   |   `ruff format` → format   |   `ruff check --fix` → auto-fix
[tool.ruff]
line-length = 100
# Tells ruff which syntax is safe to use when auto-fixing / upgrading code.
# py313 is the highest ruff currently supports; we run 3.14 but this is fine —
# it only affects what rewrites ruff will suggest, not what it catches.
target-version = "py313"

[tool.ruff.lint]
# Each code prefix is a rule set. Ruff ships ~800 rules from many linters.
# We pick the sets that matter for a FastAPI / async Python project:
select = [
    "E",     # pycodestyle — basic style errors (line length, whitespace, etc.)
    "F",     # pyflakes   — unused imports, undefined names, redefined vars
    "I",     # isort      — import order (replaces the isort tool entirely)
    "UP",    # pyupgrade  — modernise syntax: `Optional[X]` → `X | None`, etc.
    "B",     # bugbear    — likely bugs: mutable defaults, implicit re-raises, etc.
    "SIM",   # simplify   — redundant code patterns
    "RUF",   # ruff-own   — rules unique to ruff (e.g. unused noqa, implicit Optional)
    "ASYNC", # async      — async anti-patterns: blocking calls inside async fns, etc.
    "PLC",   # pylint convention
    "PLE",   # pylint errors
    "PLW",   # pylint warnings
    "TCH",   # type-checking — moves type-only imports under TYPE_CHECKING to save startup cost
]
ignore = [
    # FastAPI intentionally calls Depends() / Query() inside function signatures.
    # B008 fires on "function call in default argument" — we must silence it.
    "B008",
    # `raise X` inside an `except` block without `from` is flagged by B904.
    # We handle this case-by-case rather than silencing globally — so it stays ON.
    # (You'll see it in the errors below and we'll fix it properly.)
]

[tool.ruff.lint.isort]
# Tells isort that "app" is our own code, so it gets its own import group.
# Result: stdlib → third-party → app (each separated by a blank line).
known-first-party = ["app"]

[tool.ruff.format]
# Ruff's formatter is black-compatible. These are black's defaults.
quote-style = "double"
indent-style = "space"

# ── Pyright ──────────────────────────────────────────────────────────────────
# Pyright is a static type checker (same engine as Pylance in VS Code).
# Two modes: basic (catches obvious errors) vs strict (requires full annotations).
# We use strict on our own code — it forces you to think about types up front.
[tool.pyright]
pythonVersion = "3.14"
# Tell pyright where the virtualenv is so it resolves third-party packages.
venvPath = "."
venv = ".venv"
include = ["app"]
# typeCheckingMode = "strict" sets the strict preset as the global baseline.
# In strict mode pyright requires: all parameters typed, all return types typed,
# no implicit `Any`, no untyped function calls, etc.
# Using typeCheckingMode (not the `strict` array) so that individual reportXxx
# overrides below can take effect — the `strict` array form treats the preset
# as per-file and ignores global overrides.
typeCheckingMode = "strict"
# These two rules fire almost exclusively on third-party libraries with incomplete
# stubs (PyMongo generics, pyjwt key types). They never catch bugs
# in our own code, so we disable them globally rather than scatter type: ignore
# comments across every file that touches an external library.
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
